--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
    <section class="min-h-screen bg-hero-image bg-cover bg-center text-base text-center py-8 md:py-16 px-4 md:px-8">
     <div class="container mx-auto">
       <h2 class="text-3xl md:text-4xl lg:text-6xl hero-heading">Empowering Growth, <br> Fostering Self-leadership</h2>
-      <p class="mt-2 md:mt-4 text-base md:text-lg lg:text-4xl hero-heading">Story-based life coaching for kids</p>
+      <p class="mt-2 md:mt-4 text-base md:text-lg lg:text-4xl hero-heading">WISDOM Coaching for kids</p>
     </div>
   </section>
   
@@ -114,12 +114,12 @@
       <div class="w-2/3">
         <h3 align="left" class="text-2xl font-bold text-teal-600">Has your child ever:</h3>
         <p align="left" class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">
-          felt very down at the face of failure? <br>
-          blamed others for their own mistakes? <br>
-          Been afraid and anxious of certain activities? <br>
-          Struggled to adapt to new changes in their environment? <br>
-          Been disrespectful to family, teachers, or peers? <br>
-          Been caught lying to you, teachers, or peers? <br>
+          -felt very down at the face of failure? <br>
+          -blamed others for their own mistakes? <br>
+          -Been afraid and anxious of certain activities? <br>
+          -Struggled to adapt to new changes in their environment? <br>
+          -Been disrespectful to family, teachers, or peers? <br>
+          -Been caught lying to you, teachers, or peers? <br>
         </p>
       </div>
       <div class="w-1/3">
@@ -133,7 +133,8 @@
     <!-- Hero Section -->
     <section class="bg-hero-image2 bg-cover bg-center text-base text-center py-8 md:py-16 px-4 md:px-8">
         <div class="container mx-auto">
-            <h2 class="text-4xl font-bold sm:text-3xl hero-heading">Then I'm the right person for you!</h2>
+            <h2 class="text-4xl font-bold sm:text-3xl hero-heading">Kids learn powerful mindset skills and success principles through <br> WISDOM Coaching.
+            </h2>
             </div>
         </div>
     </section>  
@@ -142,23 +143,25 @@
     <section id="services" class="py-16 bg-white px-4 sm:px-6 lg:px-8">
         <div class="container mx-auto">
           <div class="flex flex-wrap items-center">
-            <div class="w-full md:w-1/3 pr-4">
-              <img src="index_image2.png" alt="Skills Development" class="w-full h-auto">
-            </div>
+
             <div class="w-full md:w-2/3">
-              <h3 align="right" class="text-2xl font-bold text-teal-600">What skills can I help kids develop?</h3>
-              <p align="right" class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">
-                - Growth mindset<br>
-                - Confidence and self-esteem<br>
-                - Self-leadership<br>
-                - Resilience and Coping skills<br>
-                - Happiness<br>
-                - Goal-setting and Achievement<br>
+              <p align="left" class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">
+                -How to recognize and shift limiting beliefs and how to proactively create supportive beliefs. <br>
+                -How to feel good about themselves even when things don't go their way. <br>
+                -How to believe in themselves even after facing a disappointment so that they can move through their upset and their fear <br>
+                -How to think for themselves and make decisions <br>
+                -How to manage change <br>
+                -The power of taking full responsibility for their lives, the importance of living life with integrity, and the importance of treating others with respect. <br>
+                -How to develop a mindset for creating success in their lives including learning how to set and achieve their goals. <br>
+                
               </p>
               <div class="mt-6">
                 <a href="#contact" class="bg-teal-600 text-white px-6 py-3 rounded hover:bg-teal-500">Get Started Today</a>
               </div>
             </div>
+            <div class="w-full md:w-1/3 pr-4">
+                <img src="index_image2.png" alt="Skills Development" class="w-full h-auto">
+              </div>
           </div>
         </div>
       </section>
