commit 3 (finished FAQs)

--- a/Services.html
+++ b/Services.html
@@ -90,7 +90,8 @@
                     <div class="dropdown-content hidden absolute bg-white shadow-md mt-2 py-2 rounded-md">
                         <a href="services.html#group" class="block px-4 py-2 text-gray-800 hover:bg-gray-200">Confident Kids Coaching</a>
                         <a href="services.html#1on1" class="block px-4 py-2 text-gray-800 hover:bg-gray-200">Personalized Coaching</a>
-                    </div>
+                        <a href="services.html#faq" class="block px-4 py-2 text-gray-800 hover:bg-gray-200">FAQs</a>
+                      </div>
                 </div>
                 
                 <a href="https://forms.gle/dDbxdmzhCLjb1Bob8" class="bubble-button whitespace-nowrap">Book a Session</a>
@@ -208,10 +209,21 @@
           <div class="w-full md:w-2/3">
             <h3 class="text-2xl font-bold text-teal-600">Frequently Asked Questions</h3>
             <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">
-              It consists of personalized individual sessions tailored to the specific needs of your child. A consultation plus a questionnaire to be completed by both parent and child will reveal what life skills to focus on and where to begin.
-            </p>
-            <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">
-              You can book an one-off introductory session before committing to a full program to help you and your child feel comfortable to further discover growth mindset and life skills.
+      <b>What is life coaching for kids?</b><br><br>
+      Life coaching is about supporting our kids in living their best life! Just like a baseball coach helps kids develop skills, confidence, and ability to thrive in baseball; a certified WISDOM Coach helps kids develop their mindset skills. Kids learn how to use the power of their mind and the power of their thoughts to create happiness, confidence, and success in their lives.
+      <br><br>
+      <b>How is life coaching different from counseling?</b><br><br>
+      Counseling is designed to help those with more serious issues including anxiety, depression, or OCDs- moving past abuse or going through a personal crisis at home. Life coaching is about helping people get from where they are to where they want to be, such as creating greater success, creating more balance and happiness in their lives, and feeling more fulfilled in their lives and in their relationships.
+      In many ways counseling is about resolving or managing issues from the past, whereas life coaching is about creating the future and helping clients achieve the ultimate vision they have for their lives.
+      <br><br>
+      <b>Isn't that the parent's job?</b><br><br>
+      People often confuse parenting and “life coaching for kids”. Life coaching goes beyond the traditional parenting roles of moral and character development, and it goes beyond learning how to treat others and learning how to behave.
+      WISDOM Coaching is all about teaching kid's empowerment skills and personal development skills, so they can become self-leaders of their own lives. Think of it as leadership training for kids. What we teach most grownups haven't learned.
+      Our coaches work in partnership with parents-they are part of that parent's team of trusted advisors to help their children thrive in life.
+      <br><br>
+      <b>My child does't have a problem ... is life coaching for him?</b><br><br>
+      Life coaching isn't just for kids who are facing challenges or problems. Helping kids learn how to reach their fullest potential is about personal development and personal empowerment so that they will be ready to face any challenge that comes their way. The skills they learn can be used for the rest of their lives.
+
             </p>
           </div>
         </div>
