--- a/about.html
+++ b/about.html
@@ -153,6 +153,7 @@
                     <div class="dropdown-content hidden absolute bg-white shadow-md mt-2 py-2 rounded-md">
                         <a href="services.html#group" class="block px-4 py-2 text-gray-800 hover:bg-gray-200">Confident Kids Coaching</a>
                         <a href="services.html#1on1" class="block px-4 py-2 text-gray-800 hover:bg-gray-200">Personalized Coaching</a>
+                        <a href="services.html#faq" class="block px-4 py-2 text-gray-800 hover:bg-gray-200">FAQs</a>
                     </div>
                 </div>
                 
