--- a/about.html
+++ b/about.html
@@ -161,7 +161,7 @@
             </nav>
             
             <!-- Language Switcher -->
-            <a href="index_jp.html" class="bubble-button bg-teal-600 text-white px-4 py-2 rounded hover:bg-teal-500">日本語</a>
+            <a href="index_cn.html" class="bubble-button bg-teal-600 text-white px-4 py-2 rounded hover:bg-teal-500">中文</a>
         </div>
     </header>
 
