CES commit (small fixes)

--- a/about.html
+++ b/about.html
@@ -285,7 +285,7 @@
               <p>Yes! Confirm knowledge with Wise in Fives at the start of each new session</p>
             </div>
           </div>
-        <p><br><i>From "Life Coaching Program from Kids for Kids Curriculum, Adventures in Wisdom Inc, Copyright@2024. Reprinted with permission.</i></p>
+        <p><br><i>From "Life Coaching Program from Kids for Kids Curriculum, Adventures in Wisdom Inc, Copyright@2024.</i></p>
     </div>
 </section>
 
