--- a/index.html
+++ b/index.html
@@ -117,10 +117,12 @@
         <p align="left" class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">
           -felt very down at the face of failure? <br>
           -blamed others for their own mistakes? <br>
-          -Been afraid and anxious of certain activities? <br>
-          -Struggled to adapt to new changes in their environment? <br>
-          -Been disrespectful to family, teachers, or peers? <br>
-          -Been caught lying to you, teachers, or peers? <br>
+          -been afraid and anxious of certain activities? <br>
+          -struggled to adapt to new changes in their environment? <br>
+          -felt uncomfortable telling people what they think?<br>
+            -easily influenced by their friends? <br>
+          -been disrespectful to family, teachers, or peers? <br>
+          -been caught lying to you, teachers, or peers? <br>
         </p>
       </div>
       <div class="w-1/3">
@@ -134,7 +136,7 @@
     <!-- Hero Section -->
     <section class="bg-hero-image2 bg-cover bg-center text-base text-center py-8 md:py-16 px-4 md:px-8">
         <div class="container mx-auto">
-            <h2 class="text-4xl font-bold sm:text-3xl hero-heading">Kids learn powerful mindset skills and success principles through <br> WISDOM Coaching.
+            <h2 class="text-4xl font-bold sm:text-3xl hero-heading">Kids learn powerful mindset skills and success principles <br>through WISDOM Coaching.
             </h2>
             </div>
         </div>
@@ -181,7 +183,7 @@
                 </div>
                 <!-- Huang Bangyan - CTO -->
                 <div class="p-6 border rounded shadow-sm">
-                    <img src="path_to_huang_bangyan_photo.jpg" alt="Huang Bangyan" class="w-32 h-32 rounded-full mx-auto mb-4">
+                    <img src="path_to_huang_bangyan_photo.jpg" alt="Bangyan" class="w-32 h-32 rounded-full mx-auto mb-4">
                     <h4 class="text-xl font-semibold">Huang Bangyan</h4>
                     <p class="mt-4 text-lg text-gray-700">Chief Technology Officer</p>
                     <p class="mt-2">Huang Bangyan is a technology visionary with expertise in building innovative solutions that empower organizations. As CTO, he leads the technical direction of the company, ensuring the latest advancements in tech are incorporated into their coaching processes and services.</p>
