--- a/about.html
+++ b/about.html
@@ -373,7 +373,7 @@ body, html {
               <p>Yes! Confirm knowledge with Wise in Fives at the start of each new session</p>
             </div>
           </div>
-        <p><br><i>From "Life Coaching Program from Kids for Kids Curriculum, Adventures in Wisdom Inc, Copyright@2024.</i></p>
+        <p><br><i>From "Life Coaching Program" from Kids for Kids Curriculum, Adventures in Wisdom Inc, Copyright ©2024.</i></p>
     </div>
 </section>
 
