--- a/index.html
+++ b/index.html
@@ -76,10 +76,8 @@
            background-color: #f3f4f6;
          }
          
-         .bg-hero-image { background-image: url('about_hero1.png'); }
-         .bg-hero-image2 { background-image: url('about_banner1.png'); }
-         .bg-hero-image3 { background-image: url('about_banner2.png'); }
-         .bg-hero-image4 { background-image: url('about_banner3.png'); }
+         .bg-hero-image { background-image: url('index_banner1.png'); }
+         .bg-hero-image2 { background-image: url('index_banner2.png'); }
          
          .story-container {
            display: flex;
@@ -358,6 +356,7 @@
                 <h3 class="text-2xl font-bold text-teal-600">Contact Us</h3>    
                 <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">Have questions or want to book a session? Get in touch with us!</p>
                 <p class="mt-2 text-lg sm:text-base md:text-lg text-gray-700">Email: <a href="mailto:info@connectedcoaching.jp" class="text-teal-600">info@connectedcoaching.jp</a></p>
+                <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700"><em>Copyright 2024 Connected Coaching & Consulting.</em></p>
             </div>
         </section>
 
