services banner change

--- a/services.html
+++ b/services.html
@@ -57,12 +57,17 @@
 
 
       .bg-hero-image {
-          background-image: url('index_banner1.png');
+        background-image: url('service_hero1.png');
       }
 
       .bg-hero-image2 {
-          background-image: url('index_banner2.png');
+        background-image: url('service_banner1.png');
       }
+
+      .bg-hero-image3 {
+          background-image: url('service_banner2.png');
+      }
+
 
       .mobile-dropdown {
           display: none;
@@ -247,7 +252,7 @@
   
 
               <!-- Hero Section -->
-    <section class="bg-hero-image2 bg-cover bg-center text-base text-center py-8 md:py-16 px-4 md:px-8">
+    <section class="bg-hero-image3 bg-cover bg-center text-base text-center py-8 md:py-16 px-4 md:px-8">
         <div class="container mx-auto">
             </div>
         </div>
