--- a/index_cn.html
+++ b/index_cn.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connected Coaching & Consulting - 赋能成长，改变人生</title>
+    <title>Connected Coaching & Consulting - 助力孩子的成长，培养自我领导力</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap" rel="stylesheet">
     <style>
@@ -267,16 +267,16 @@
     <section id="about" class="py-16 bg-gray-50 px-4 sm:px-6 lg:px-8">
         <div class="container mx-auto flex flex-col md:flex-row">
             <div class="w-full md:w-2/3">
-                <h3 class="text-2xl font-bold text-teal-600">您的孩子是否曾经：</h3>
+                <h3 class="text-2xl font-bold text-teal-600">你的孩子是否面对以下的挑战：</h3>
                 <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">
-                    - 在面对失败时感到非常沮丧？<br>
-                    - 把自己的错误归咎于他人？<br>
-                    - 对某些活动感到恐惧和焦虑？<br>
-                    - 难以适应新的环境变化？<br>
-                    - 对表达自己的想法感到不舒服？<br>
-                    - 容易受到朋友的影响？<br>
-                    - 对家人、老师或同龄人不尊重？<br>
-                    - 被发现对您、老师或同龄人说谎？<br>
+				-	在面对失败时感到非常沮丧？<br>
+				-	经常把自己的错误失败归咎于他人？<br>
+				-	害怕和胆怯去尝试新事物？<br>
+				-	难以适应变化中的新环境？<br>
+				-	对于在大家面前表达自己的想法感到胆怯？<br>
+				-	容易受到周围朋友的影响？<br>
+				-	对家人、老师或同龄人表现出不尊重的行为？<br>
+				-	有时会对你、老师或同龄人撒谎？<br>
                 </p>
             </div>
             <div class="w-full md:w-1/3 mt-4 md:mt-0">
@@ -288,7 +288,7 @@
     <!-- Hero Section 2 -->
     <section class="bg-hero-image2 bg-cover bg-center text-base text-center py-8 md:py-16 px-4 md:px-8">
         <div class="container mx-auto">
-            <h2 class="text-4xl font-bold sm:text-3xl hero-heading">孩子们通过智慧辅导学习强大的心态技能和成功原则。</h2>
+            <h2 class="text-4xl font-bold sm:text-3xl hero-heading">通过成长教练的陪伴，孩子将学到强大的思维技能和成功的原则！</h2>
         </div>
     </section>
 
@@ -298,13 +298,14 @@
             <div class="flex flex-col md:flex-row items-center">
                 <div class="w-full md:w-2/3">
                     <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">
-                        - 学习如何识别和转变限制性信念，以及如何主动创造支持性的信念。<br>
-                        - 学习即使事情不如意，也能对自己感觉良好。<br>
-                        - 学习在经历失望后如何相信自己，以便他们能够克服沮丧和恐惧。<br>
-                        - 学习如何独立思考和做决定。<br>
-                        - 学习如何应对变化。<br>
-                        - 了解对自己生活负全部责任的力量，生活诚信的重要性，以及尊重他人的重要性。<br>
-                        - 学习如何培养成功的心态，包括学习如何设定和实现目标。<br>
+                        你的孩子将学习到<br>
+						-	如何自我意识和转变限制性信念，以及如何主动创造正向信念。<br>
+						-	如何在事与愿违时也能保持乐观心态。<br>
+						-	如何面对失败仍然充满自信，相信自己能够战胜失落和恐惧。<br>
+						-	如何独立思考并做出决定。<br>
+						-	如何应对周围环境的变化。<br>
+						-	承担对自我人生的责任，以及为人正直和尊重他人的重要性。<br>
+						-	培养走向成功的思维模式，包括如何自我设定目标和如何实现目标。<br>
                     </p>
                     <div class="mt-6">
                         <a href="#contact" class="bg-teal-600 text-white px-6 py-3 rounded hover:bg-teal-500">立即开始</a>
@@ -320,16 +321,16 @@
 <!-- Team Section -->
 <section id="team" class="py-16 bg-gray-50 px-4 sm:px-6 lg:px-8">
     <div class="container mx-auto">
-        <h3 class="text-2xl font-bold text-teal-600 text-center mb-8">团队介绍</h3>
+        <h3 class="text-2xl font-bold text-teal-600 text-center mb-8">我们的团队</h3>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
             <!-- 陆乐 - 创始人 -->
             <div class="flex flex-col items-center p-6 bg-white rounded-lg shadow-md">
                 <img src="path_to_lu_le_photo.jpg" alt="陆乐" class="w-48 h-48 rounded-full mb-6">
                 <div class="text-center">
                     <h4 class="text-xl font-semibold mb-2">陆乐</h4>
-                    <p class="text-gray-600 mb-4">创始人兼生活教练</p>
+                    <p class="text-gray-600 mb-4">（公司创始人・成长教练）</p>
                     <p class="text-gray-700 leading-relaxed">
-                        乐是一位充满激情的生活教练，致力于赋能儿童释放他们的全部潜能。凭借国际教练联合会（ICF）和智慧冒险（Adventures in Wisdom）的认证，她引导年轻的心灵走向自信、坚韧和快乐的生活。凭借多年的经验，乐帮助孩子们建立自我意识，发展必要的心态技能，并以勇气和热情迎接挑战。
+                        陆乐是一位充满热情的成长教练，拥有国际教练联合会（ICF）和美国少儿培训教育机构Adventures in Wisdom的认证。她致力于赋能孩子的成长，帮助他们释放最大的潜能。凭借多年的经验，她帮助孩子们建立自我意识，培养强大的思维模式技能，以勇气和热情拥抱挑战，引导年轻的心灵走向自信、坚强和快乐的人生。
                     </p>
                 </div>
             </div>
@@ -341,7 +342,7 @@
                     <h4 class="text-xl font-semibold mb-2">黄邦彦</h4>
                     <p class="text-gray-600 mb-4">首席技术官</p>
                     <p class="text-gray-700 leading-relaxed">
-                        黄邦彦是一位技术远见者，擅长构建赋能组织的创新解决方案。作为首席技术官，他领导公司的技术方向，确保将最新的技术进步融入到他们的辅导流程和服务中。
+                        黄邦彦是一位技术远见卓识者，擅长构建赋能组织的创新解决方案。作为首席技术官，他领导公司的技术发展方向，确保将最新的技术进步融入其教练流程和服务中。
                     </p>
                 </div>
             </div>
@@ -353,7 +354,7 @@
     <section id="contact" class="py-16 bg-white px-4 sm:px-6 lg:px-8">
         <div class="container mx-auto text-center">
             <h3 class="text-2xl font-bold text-teal-600">联系我们</h3>    
-            <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">有任何问题或想预约课程？请联系我们！</p>
+            <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">如果您有任何疑问或对我们的服务感兴趣，欢迎预约免费咨询！</p>
             <p class="mt-2 text-lg sm:text-base md:text-lg text-gray-700">电子邮件：<a href="mailto:info@connectedcoaching.jp" class="text-teal-600">info@connectedcoaching.jp</a></p>
         </div>
     </section>
