--- a/services_cn.html
+++ b/services_cn.html
@@ -132,12 +132,12 @@
   
               <!-- Center: Navigation -->
              <nav class="hidden md:flex items-center space-x-2">
-  <a href="index.html" class="bubble-button text-sm whitespace-nowrap">首页</a>
+  <a href="index_cn.html" class="bubble-button text-sm whitespace-nowrap">首页</a>
   <div class="relative">
     <button class="bubble-button text-sm whitespace-nowrap dropdown-toggle" data-dropdown="about">关于我们</button>
     <div class="dropdown-content hidden absolute bg-white shadow-md mt-2 py-2 rounded-md" id="about-dropdown">
-      <a href="about.html#me" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">关于我</a>
-      <a href="about.html#program" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">项目</a>
+      <a href="about_cn.html#me" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">关于我</a>
+      <a href="about_cn.html#program" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">项目</a>
     </div>
   </div>
   <div class="relative">
@@ -165,17 +165,17 @@
   
           <!-- Mobile Dropdown 关于我nu -->
           <div class="mobile-dropdown">
-              <a href="index.html" class="block py-2 px-4 text-gray-800 hover:bg-gray-200">首页</a>
+              <a href="index_cn.html" class="block py-2 px-4 text-gray-800 hover:bg-gray-200">首页</a>
               <button class="w-full text-left py-2 px-4 text-gray-800 hover:bg-gray-200">关于我们</button>
               <div class="pl-4 hidden">
-                  <a href="about.html#me" class="block py-2 px-4 text-gray-800 hover:bg-gray-200">关于我</a>
-                  <a href="about.html#program" class="block py-2 px-4 text-gray-800 hover:bg-gray-200">项目</a>
+                  <a href="about_cn.html#me" class="block py-2 px-4 text-gray-800 hover:bg-gray-200">关于我</a>
+                  <a href="about_cn.html#program" class="block py-2 px-4 text-gray-800 hover:bg-gray-200">项目</a>
               </div>
               <button class="w-full text-left py-2 px-4 text-gray-800 hover:bg-gray-200">服务</button>
               <div class="pl-4 hidden">
-                  <a href="services.html#group" class="block py-2 px-4 text-gray-800 hover:bg-gray-200">Confident Kids Coaching</a>
-                  <a href="services.html#1on1" class="block py-2 px-4 text-gray-800 hover:bg-gray-200">Personalized Coaching</a>
-                  <a href="services.html#faq" class="block py-2 px-4 text-gray-800 hover:bg-gray-200">常见问题</a>
+                  <a href="services_cn.html#group" class="block py-2 px-4 text-gray-800 hover:bg-gray-200">Confident Kids Coaching</a>
+                  <a href="services_cn.html#1on1" class="block py-2 px-4 text-gray-800 hover:bg-gray-200">Personalized Coaching</a>
+                  <a href="services_cn.html#faq" class="block py-2 px-4 text-gray-800 hover:bg-gray-200">常见问题</a>
               </div>
               <a href="https://forms.gle/dDbxdmzhCLjb1Bob8" class="block py-2 px-4 text-gray-800 hover:bg-gray-200">预约课程</a>
           </div>
@@ -186,7 +186,7 @@
    <!-- Hero Section -->
    <section class="min-h-screen bg-hero-image bg-cover bg-center text-base text-center py-8 md:py-16 px-4 md:px-8">
     <div class="container mx-auto">
-      <h2 class="text-3xl md:text-4xl lg:text-6xl hero-heading">服务</h2>
+      <h2 class="text-3xl md:text-4xl lg:text-6xl hero-heading">服务内容</h2>
       <p class="mt-2 md:mt-4 text-base md:text-lg lg:text-4xl hero-heading">关于我们提供的辅导服务。</p>
     </div>
   </section>
@@ -199,19 +199,19 @@
               <img src="service_image1.png" alt="Confident Kids Coaching" class="w-full h-auto rounded-lg shadow-md">
             </div>
             <div class="w-full md:w-2/3">
-              <h3 class="text-2xl font-bold text-teal-600">自信儿童辅导项目</h3>
+              <h3 class="text-2xl font-bold text-teal-600">“培养自信勇于挑战”课程</h3>
               <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">
-                孩子是否相信自己将会决定他们是谁以及他们在生活中创造什么。 强大的自信不是孩子天生拥有或缺乏的。 即使经历了失望，仍然相信自己是一种他们可以培养的技能！
+                该课程总结了过去十多年几百名认证WISDOM Coach的实践经验，精选了全球最受家长欢迎的6项思维模式技能，帮助孩子增强自信，提高韧性，勇敢走出舒适区为自己未来的人生开拓各种可能性。
               </p>
               <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">
-                This program consists of 5 coaching sessions as follows to help kids learn how to believe in themselves when facing new things, move through fear, uncertainty and self-doubt, prepare their mind for success with "Power Shifting" and self-talk skills:
-              </p>
+                课程由5次课组成，全部课程结束之后提供专属家长的30分钟交流时间，分享孩子的课程参与情况，为未来在思维技能培养方面提供建议。
+				</p>
               <ul class="mt-4 text-lg sm:text-base md:text-lg text-gray-700 list-disc list-inside">
-                <li>课程 1 - 什么是自信</li>
-                <li>课程 2 - 您的思维如何塑造您的世界</li>
-                <li>课程 3 - 神经通路与管理恐惧</li>
-                <li>课程 4 - 自我对话</li>
-                <li>课程 5 - 能力转移</li>
+                <li>第一课- 什么是自信和它的重要性</li>
+                <li>第二课- 我们的想法是怎么形成的</li>
+                <li>第三课- 什么是神经回路和怎么战胜恐惧</li>
+                <li>第四课- 什么是正向的自我对话</li>
+                <li>第五课- 面对挫折怎么转变视角培养韧性</li>
               </ul>
             </div>
           </div>
@@ -233,9 +233,9 @@
               <img src="service_image2.png" alt="Personalized Coaching" class="w-full h-auto rounded-lg shadow-md">
             </div>
             <div class="w-full md:w-2/3">
-              <h3 class="text-2xl font-bold text-teal-600">个性化辅导项目</h3>
+              <h3 class="text-2xl font-bold text-teal-600">个性化教练课程</h3>
               <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">
-                包括针对您孩子的具体需求定制的个性化辅导课程。 通过一次咨询和家长与孩子共同完成的问卷，将确定需要关注的生活技能及起点。
+                该课程是针对您孩子的特定需求量身定制的个性化一对一教练课程。 通过首次免费咨询和由家长和孩子共同完成的问卷调查，就孩子需要重点关注的思维模式技能我们将提供完整的课程建议。				
               </p>
               <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">
                 您可以在报名完整课程之前预约一次性介绍课程，以帮助您和您的孩子更舒适地探索成长心态和生活技能。
@@ -261,24 +261,22 @@
             <img src="service_image2.png" alt="Personalized Coaching" class="w-full h-auto rounded-lg shadow-md">
           </div>
           <div class="w-full md:w-2/3">
-            <h3 class="text-2xl font-bold text-teal-600">常见问题解答</h3>
+            <h3 class="text-2xl font-bold text-teal-600">常见问题</h3>
             <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">
-      <b>什么是儿童生活辅导？</b><br><br>
-      生活辅导旨在支持孩子们过上最好的生活！ Just like a baseball coach helps kids develop skills, confidence, and ability to thrive in baseball; a certified WISDOM Coach helps kids develop their mindset skills. Kids learn how to use the power of their mind and the power of their thoughts to create happiness, confidence, and success in their lives.
-      <br><br>
-      <b>生活辅导与咨询有何不同？</b><br><br>
-      Counseling is designed to help those with more serious issues including anxiety, depression, or OCDs- moving past abuse or going through a personal crisis at home. Life coaching is about helping people get from where they are to where they want to be, such as creating greater success, creating more balance and happiness in their lives, and feeling more fulfilled in their lives and in their relationships.
-      In many ways counseling is about resolving or managing issues from the past, whereas life coaching is about creating the future and helping clients achieve the ultimate vision they have for their lives.
-      <br><br>
-      <b>这不是父母的职责吗？</b><br><br>
-      People often confuse parenting and “life coaching for kids”. Life coaching goes beyond the traditional parenting roles of moral and character development, and it goes beyond learning how to treat others and learning how to behave.
-      WISDOM Coaching is all about teaching kid's empowerment skills and personal development skills, so they can become self-leaders of their own lives. Think of it as leadership training for kids. What we teach most grownups haven't learned.
-      Our coaches work in partnership with parents-they are part of that parent's team of trusted advisors to help their children thrive in life.
-      <br><br>
-      <b>My child does't have a problem ... is life coaching for him?</b><br><br>
-      Life coaching isn't just for kids who are facing challenges or problems. Helping kids learn how to reach their fullest potential is about personal development and personal empowerment so that they will be ready to face any challenge that comes their way. The skills they learn can be used for the rest of their lives.
-
-            </p>
+      <b>什么是孩子的成长教练？</b><br><br>
+      孩子的成长教练就是孩子成长的陪跑者，引导孩子建立自我认知，树立自信，明确目标，释放潜力，勇于挑战。认证的 WISDOM 教练帮助孩子培养强大的思维模式技能，成为自己人生的引导者，开创幸福、自信和成功的人生之路。 <br><br>
+      <b>孩子的成长教练与心理咨询有什么不同？</b><br><br>
+      心理咨询旨在帮助那些有心理情绪烦恼的人，包括焦虑、抑郁或强迫症——帮助他们克服心理危机。 成长教练帮助人们实现自己的理想，创造成功，从而拥有幸福快乐的人生。<br>
+	  简单地说，心理咨询侧重于解决过去的问题，而成长教练专注于创造未来，帮助客户实现他们对生活的终极愿景。<br><br>
+      <b>孩子的成长教练是否抢夺了父母的工作？</b><br><br>
+      成长教练超越了传统的父母角色，例如教导孩子道德和品格发展，学习如何对待他人和如何学习等等。<br>
+	  成长教练是赋能孩子的成长过程，培养孩子的自我激励能力和自我领导力，使他们能够成为自己人生的引导者。 我们所教的课程内容可以视为孩子的领导力培训。<br>
+	  成长教练会与父母精诚合作——他们是父母值得信任的顾问团队的一部分，以帮助他们的孩子茁壮成长。<br><br>
+      <b>我的孩子没有问题，需要成长教练吗？</b><br><br>
+      成长教练帮助的不仅仅是为了面临挑战或问题的孩子。 帮助孩子们学会自我认知，增强自信，挑战自己的极限和释放最大的潜力将为他们的成长赋能，积极正向的心态也将为他们未来接受任何挑战做好准备。 他们所学习的思维模式技能将受用一生。<br><br>
+      <b>课程的上课方式是什么？</b><br><br>
+      目前，我们提供的所有课程均以在线Zoom会议的形式进行。 如果您居住在东京，并且希望您的孩子能够参加面对面辅导课程，我们可以为您安排。 请随时联系我们以获取更多信息。<br>
+		</p>
           </div>
         </div>
       </div>
