--- a/services_cn.html
+++ b/services_cn.html
@@ -154,7 +154,7 @@
   
               <!-- Right side: Language and Mobile 关于我nu -->
               <div class="flex items-center space-x-2">
-                  <a href="index_cn.html" class="bubble-button bg-teal-600 text-white text-sm px-3 py-1 rounded hover:bg-teal-500">中文</a>
+                  <a href="index.html" class="bubble-button bg-teal-600 text-white text-sm px-3 py-1 rounded hover:bg-teal-500">English</a>
                   <button class="md:hidden mobile-menu">
                       <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
