banner update attempt 2

--- a/services.html
+++ b/services.html
@@ -192,7 +192,7 @@
    <section class="min-h-screen bg-hero-image bg-cover bg-center text-base text-center py-8 md:py-16 px-4 md:px-8">
     <div class="container mx-auto">
       <h2 class="text-3xl md:text-4xl lg:text-6xl hero-heading">Services</h2>
-      <p class="mt-2 md:mt-4 text-base md:text-lg lg:text-4xl hero-heading">All about the coaching services Le provide.</p>
+      <p class="mt-2 md:mt-4 text-base md:text-lg lg:text-4xl hero-heading">All about the coaching services Ms. Le provides.</p>
     </div>
   </section>
   
