--- a/services.html
+++ b/services.html
@@ -57,17 +57,16 @@
 
 
       .bg-hero-image {
-        background-image: url('service_hero1.png');
+          background-image: url('service_hero1.png');
       }
 
       .bg-hero-image2 {
-        background-image: url('service_banner1.png');
+          background-image: url('service_banner1.png');
       }
 
       .bg-hero-image3 {
           background-image: url('service_banner2.png');
       }
-
 
       .mobile-dropdown {
           display: none;
@@ -192,7 +191,6 @@
    <section class="min-h-screen bg-hero-image bg-cover bg-center text-base text-center py-8 md:py-16 px-4 md:px-8">
     <div class="container mx-auto">
       <h2 class="text-3xl md:text-4xl lg:text-6xl hero-heading">Services</h2>
-      <p class="mt-2 md:mt-4 text-base md:text-lg lg:text-4xl hero-heading">All about the coaching services Ms. Le provides.</p>
     </div>
   </section>
   
@@ -269,20 +267,19 @@
             <h3 class="text-2xl font-bold text-teal-600">Frequently Asked Questions</h3>
             <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">
       <b>What is life coaching for kids?</b><br><br>
-      Life coaching is about supporting our kids in living their best life! Just like a baseball coach helps kids develop skills, confidence, and ability to thrive in baseball; a certified WISDOM Coach helps kids develop their mindset skills. Kids learn how to use the power of their mind and the power of their thoughts to create happiness, confidence, and success in their lives.
+      Life coaching for kids is about empowering young people to live their best lives. Just as a sports coach helps athletes develop skills and confidence, a life coach guides children in developing their mindset skills. They learn to harness the power of their thoughts to cultivate happiness, confidence, and success.
       <br><br>
       <b>How is life coaching different from counseling?</b><br><br>
-      Counseling is designed to help those with more serious issues including anxiety, depression, or OCDs- moving past abuse or going through a personal crisis at home. Life coaching is about helping people get from where they are to where they want to be, such as creating greater success, creating more balance and happiness in their lives, and feeling more fulfilled in their lives and in their relationships.
-      In many ways counseling is about resolving or managing issues from the past, whereas life coaching is about creating the future and helping clients achieve the ultimate vision they have for their lives.
+      While counseling addresses deeper issues like anxiety or trauma, life coaching focuses on helping children achieve their goals and aspirations. It's about creating the future they desire, rather than resolving past issues.
       <br><br>
       <b>Isn't that the parent's job?</b><br><br>
-      People often confuse parenting and “life coaching for kids”. Life coaching goes beyond the traditional parenting roles of moral and character development, and it goes beyond learning how to treat others and learning how to behave.
-      WISDOM Coaching is all about teaching kid's empowerment skills and personal development skills, so they can become self-leaders of their own lives. Think of it as leadership training for kids. What we teach most grownups haven't learned.
-      Our coaches work in partnership with parents-they are part of that parent's team of trusted advisors to help their children thrive in life.
+      Parenting plays a vital role, but life coaching goes beyond traditional parenting. It focuses on teaching children personal development and leadership skills, empowering them to become self-directed individuals. Life coaches work in partnership with parents to support children's growth and success. 
       <br><br>
       <b>My child does't have a problem ... is life coaching for him?</b><br><br>
-      Life coaching isn't just for kids who are facing challenges or problems. Helping kids learn how to reach their fullest potential is about personal development and personal empowerment so that they will be ready to face any challenge that comes their way. The skills they learn can be used for the rest of their lives.
-
+      Life coaching benefits all children. It equips them with valuable skills to navigate challenges and reach their full potential. These skills are invaluable throughout their lives.
+      <br><br>
+      <b>What is the Teaching Method of the Course?</b><br><br>
+      Currently, all courses we offer are delivered in the form of online Zoom meetings. However, if you live in Tokyo and would prefer your child to have in-person coaching sessions, we can arrange that. Please feel free to contact us for more information.
             </p>
           </div>
         </div>
