--- a/services.html
+++ b/services.html
@@ -57,16 +57,17 @@
 
 
       .bg-hero-image {
-          background-image: url('service_hero1.png');
+        background-image: url('service_hero1.png');
       }
 
       .bg-hero-image2 {
-          background-image: url('service_banner1.png');
+        background-image: url('service_banner1.png');
       }
 
       .bg-hero-image3 {
           background-image: url('service_banner2.png');
       }
+
 
       .mobile-dropdown {
           display: none;
@@ -191,6 +192,7 @@
    <section class="min-h-screen bg-hero-image bg-cover bg-center text-base text-center py-8 md:py-16 px-4 md:px-8">
     <div class="container mx-auto">
       <h2 class="text-3xl md:text-4xl lg:text-6xl hero-heading">Services</h2>
+      <p class="mt-2 md:mt-4 text-base md:text-lg lg:text-4xl hero-heading"></p>
     </div>
   </section>
   
@@ -223,7 +225,7 @@
 
     <!-- Hero Section -->
     <section class="bg-hero-image2 bg-cover bg-center text-base text-center py-8 md:py-16 px-4 md:px-8">
-        <div class="container mx-auto">
+        <div class="container mx-auto"> 
             </div>
         </div>
     </section>  
@@ -261,25 +263,26 @@
       <div class="container mx-auto">
         <div class="flex flex-wrap items-start">
           <div class="w-full md:w-1/3 pr-4 mb-4 md:mb-0">
-            <img src="service_image2.png" alt="Personalized Coaching" class="w-full h-auto rounded-lg shadow-md">
+            <img src="service_image3.png" alt="Personalized Coaching" class="w-full h-auto rounded-lg shadow-md">
           </div>
           <div class="w-full md:w-2/3">
             <h3 class="text-2xl font-bold text-teal-600">Frequently Asked Questions</h3>
             <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">
-      <b>What is life coaching for kids?</b><br><br>
-      Life coaching for kids is about empowering young people to live their best lives. Just as a sports coach helps athletes develop skills and confidence, a life coach guides children in developing their mindset skills. They learn to harness the power of their thoughts to cultivate happiness, confidence, and success.
-      <br><br>
-      <b>How is life coaching different from counseling?</b><br><br>
-      While counseling addresses deeper issues like anxiety or trauma, life coaching focuses on helping children achieve their goals and aspirations. It's about creating the future they desire, rather than resolving past issues.
-      <br><br>
-      <b>Isn't that the parent's job?</b><br><br>
-      Parenting plays a vital role, but life coaching goes beyond traditional parenting. It focuses on teaching children personal development and leadership skills, empowering them to become self-directed individuals. Life coaches work in partnership with parents to support children's growth and success. 
-      <br><br>
-      <b>My child does't have a problem ... is life coaching for him?</b><br><br>
-      Life coaching benefits all children. It equips them with valuable skills to navigate challenges and reach their full potential. These skills are invaluable throughout their lives.
-      <br><br>
-      <b>What is the Teaching Method of the Course?</b><br><br>
-      Currently, all courses we offer are delivered in the form of online Zoom meetings. However, if you live in Tokyo and would prefer your child to have in-person coaching sessions, we can arrange that. Please feel free to contact us for more information.
+              <b>What is life coaching for kids?</b><br><br>
+              Life coaching for kids is about empowering young people to live their best lives. Just as a sports coach helps athletes develop skills and confidence, a life coach guides children in developing their mindset skills. They learn to harness the power of their thoughts to cultivate happiness, confidence, and success.
+              <br><br>
+              <b>How is life coaching different from counseling?</b><br><br>
+              While counseling addresses deeper issues like anxiety or trauma, life coaching focuses on helping children achieve their goals and aspirations. It's about creating the future they desire, rather than resolving past issues.
+              <br><br>
+              <b>Isn't that the parent's job?</b><br><br>
+              Parenting plays a vital role, but life coaching goes beyond traditional parenting. It focuses on teaching children personal development and leadership skills, empowering them to become self-directed individuals. Life coaches work in partnership with parents to support children's growth and success. 
+              <br><br>
+              <b>My child does't have a problem ... is life coaching for him?</b><br><br>
+              Life coaching benefits all children. It equips them with valuable skills to navigate challenges and reach their full potential. These skills are invaluable throughout their lives.
+              <br><br>
+              <b>What is the Teaching Method of the Course?</b><br><br>
+              Currently, all courses we offer are delivered in the form of online Zoom meetings. However, if you live in Tokyo and would prefer your child to have in-person coaching sessions, we can arrange that. Please feel free to contact us for more information.
+
             </p>
           </div>
         </div>
