--- a/services_cn.html
+++ b/services_cn.html
@@ -143,8 +143,8 @@
   <div class="relative">
     <button class="bubble-button text-sm whitespace-nowrap dropdown-toggle" data-dropdown="services">服务</button>
     <div class="dropdown-content hidden absolute bg-white shadow-md mt-2 py-2 rounded-md" id="services-dropdown">
-      <a href="#group" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">Confident Kids Coaching</a>
-      <a href="#1on1" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">Personalized Coaching</a>
+      <a href="#group" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">自信儿童辅导</a>
+      <a href="#1on1" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">个性化辅导</a>
       <a href="#faq" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">常见问题</a>
     </div>
   </div>
