--- a/index_cn.html
+++ b/index_cn.html
@@ -186,6 +186,11 @@
              display: none;
            }
          }
+         * {
+    font-family: 'KaiTi', 'STKaiti', 'BiauKai', serif;
+}
+
+         
          </style>
 </head>
 <body class="bg-white text-black">
@@ -205,19 +210,20 @@
                     <div class="relative">
                       <button class="bubble-button text-sm whitespace-nowrap dropdown-toggle" data-dropdown="about">关于我们</button>
                       <div class="dropdown-content hidden absolute bg-white shadow-md mt-2 py-2 rounded-md" id="about-dropdown">
-                        <a href="about_cn.html#me" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">关于我</a>
-                        <a href="about_cn.html#program" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">项目</a>
+                        <a href="about_cn.html#me" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">关于成长教练</a>
+                        <a href="about_cn.html#program" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">关于课程</a>
                       </div>
                     </div>
                     <div class="relative">
                       <button class="bubble-button text-sm whitespace-nowrap dropdown-toggle" data-dropdown="services">服务</button>
                       <div class="dropdown-content hidden absolute bg-white shadow-md mt-2 py-2 rounded-md" id="services-dropdown">
                         <a href="services_cn.html#group" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">自信儿童辅导</a>
+                        <a href="poster_cn.png" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200" target="_blank">更多内容</a>
                         <a href="services_cn.html#1on1" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">个性化辅导</a>
                         <a href="services_cn.html#faq" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">常见问题</a>
                       </div>
                     </div>
-                    <a href="https://forms.gle/dDbxdmzhCLjb1Bob8" class="bubble-button text-sm whitespace-nowrap">预约课程</a>
+                    <a href="https://forms.gle/gAEDk4SEbSSTN53B6" class="bubble-button text-sm whitespace-nowrap">预约免费咨询</a>
                   </nav>
 
                 <!-- Right side: Language and Mobile Menu -->
@@ -350,20 +356,20 @@
     </div>
 </section>
 
-    <!-- Contact Section -->
-    <section id="contact" class="py-16 bg-white px-4 sm:px-6 lg:px-8">
-        <div class="container mx-auto text-center">
-            <h3 class="text-2xl font-bold text-teal-600">联系我们</h3>    
-            <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">如果您有任何疑问或对我们的服务感兴趣，欢迎预约免费咨询！</p>
-            <p class="mt-2 text-lg sm:text-base md:text-lg text-gray-700">电子邮件：<a href="mailto:info@connectedcoaching.jp" class="text-teal-600">info@connectedcoaching.jp</a></p>
-        </div>
-    </section>
+        <!-- Contact Section -->
+        <section id="contact" class="py-16 bg-white px-4 sm:px-6 lg:px-8">
+          <div class="container mx-auto text-center">
+              <h3 class="text-2xl font-bold text-teal-600">联系我们</h3>    
+              <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">如果您有任何疑问或对我们的服务感兴趣，欢迎预约免费咨询！</p>
+              <p class="mt-2 text-lg sm:text-base md:text-lg text-gray-700">电子邮件： <a href="mailto:info@connectedcoaching.jp" class="text-teal-600">info@connectedcoaching.jp</a></p>
+              <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700"><em>Copyright 2024 Connected Coaching & Consulting.</em></p>
+          </div>
+      </section>
 
-    <!-- Footer -->
-    <footer class="bg-teal-600 text-white text-center py-4">
-        <p>&copy; 2024 Connected Coaching & Consulting. 保留所有权利。</p>
-    </footer>
-    
+      <!-- Footer -->
+      <footer class="bg-teal-600 text-white text-center py-4">
+          <p>&copy; 2024 Connected Coaching & Consulting. All Rights Reserved.</p>
+      </footer>
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
