--- a/services_cn.html
+++ b/services_cn.html
@@ -50,10 +50,6 @@
       }
 
 
-      .hero-heading {
-          font-family: 'Bubblegum Sans', cursive;
-      }
-
 
 
       .bg-hero-image {
@@ -113,6 +109,9 @@
               justify-content: space-between;
           }
   }
+  * {
+    font-family: 'KaiTi', 'STKaiti', 'BiauKai', serif;
+}
 
       
 
@@ -136,19 +135,20 @@
   <div class="relative">
     <button class="bubble-button text-sm whitespace-nowrap dropdown-toggle" data-dropdown="about">关于我们</button>
     <div class="dropdown-content hidden absolute bg-white shadow-md mt-2 py-2 rounded-md" id="about-dropdown">
-      <a href="about_cn.html#me" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">关于我</a>
-      <a href="about_cn.html#program" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">项目</a>
+      <a href="about_cn.html#me" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">关于成长教练</a>
+      <a href="about_cn.html#program" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">关于课程</a>
     </div>
   </div>
   <div class="relative">
     <button class="bubble-button text-sm whitespace-nowrap dropdown-toggle" data-dropdown="services">服务</button>
     <div class="dropdown-content hidden absolute bg-white shadow-md mt-2 py-2 rounded-md" id="services-dropdown">
-      <a href="#group" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">Confident Kids Coaching</a>
-      <a href="#1on1" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">Personalized Coaching</a>
+      <a href="#group" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">自信儿童辅导</a>
+      <a href="poster_cn.png" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200" target="_blank">更多内容</a>
+      <a href="#1on1" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">个性化辅导</a>
       <a href="#faq" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">常见问题</a>
     </div>
   </div>
-  <a href="https://forms.gle/dDbxdmzhCLjb1Bob8" class="bubble-button text-sm whitespace-nowrap">预约课程</a>
+  <a href="https://forms.gle/gAEDk4SEbSSTN53B6" class="bubble-button text-sm whitespace-nowrap">预约免费咨询</a>
 </nav>
 
   
@@ -187,7 +187,6 @@
    <section class="min-h-screen bg-hero-image bg-cover bg-center text-base text-center py-8 md:py-16 px-4 md:px-8">
     <div class="container mx-auto">
       <h2 class="text-3xl md:text-4xl lg:text-6xl hero-heading">服务内容</h2>
-      <p class="mt-2 md:mt-4 text-base md:text-lg lg:text-4xl hero-heading">关于我们提供的辅导服务。</p>
     </div>
   </section>
   
@@ -263,7 +262,7 @@
           <div class="w-full md:w-2/3">
             <h3 class="text-2xl font-bold text-teal-600">常见问题</h3>
             <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">
-      <b>什么是孩子的成长教练？</b><br><br>
+      <b>认证的智慧教练（WISDOM Coach<sup>TM</sup>）</b><br><br>
       孩子的成长教练就是孩子成长的陪跑者，引导孩子建立自我认知，树立自信，明确目标，释放潜力，勇于挑战。认证的 WISDOM 教练帮助孩子培养强大的思维模式技能，成为自己人生的引导者，开创幸福、自信和成功的人生之路。 <br><br>
       <b>孩子的成长教练与心理咨询有什么不同？</b><br><br>
       心理咨询旨在帮助那些有心理情绪烦恼的人，包括焦虑、抑郁或强迫症——帮助他们克服心理危机。 成长教练帮助人们实现自己的理想，创造成功，从而拥有幸福快乐的人生。<br>
@@ -283,20 +282,20 @@
     </section>
 
 
-    <!-- Contact Section -->
-    <section id="contact" class="py-16 bg-white px-4 sm:px-6 lg:px-8">
-        <div class="container mx-auto text-center">
-            <h3 class="text-2xl font-bold text-teal-600">联系我们</h3>
-            <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">有任何问题或想预约课程？请联系我们！</p>
-            <p class="mt-2 text-lg sm:text-base md:text-lg text-gray-700">电子邮件： <a href="mailto:info@connectedcoaching.jp" class="text-teal-600">info@connectedcoaching.jp</a></p>
-        </div>
-    </section>
+        <!-- Contact Section -->
+        <section id="contact" class="py-16 bg-white px-4 sm:px-6 lg:px-8">
+          <div class="container mx-auto text-center">
+              <h3 class="text-2xl font-bold text-teal-600">联系我们</h3>    
+              <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">如果您有任何疑问或对我们的服务感兴趣，欢迎预约免费咨询！</p>
+              <p class="mt-2 text-lg sm:text-base md:text-lg text-gray-700">电子邮件： <a href="mailto:info@connectedcoaching.jp" class="text-teal-600">info@connectedcoaching.jp</a></p>
+              <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700"><em>Copyright 2024 Connected Coaching & Consulting.</em></p>
+          </div>
+      </section>
 
-    <!-- Footer -->
-    <footer class="bg-teal-600 text-white text-center py-4">
-        <p>&copy; 2024 Connected Coaching & Consulting. All Rights Reserved.</p>
-    </footer>
-
+      <!-- Footer -->
+      <footer class="bg-teal-600 text-white text-center py-4">
+          <p>&copy; 2024 Connected Coaching & Consulting. All Rights Reserved.</p>
+      </footer>
     <script>
     document.addEventListener('DOMContentLoaded', function() {
   const mobile关于我nuButton = document.querySelector('.mobile-menu');
