--- a/services.html
+++ b/services.html
@@ -149,6 +149,7 @@
     <button class="bubble-button text-sm whitespace-nowrap dropdown-toggle" data-dropdown="services">Services</button>
     <div class="dropdown-content hidden absolute bg-white shadow-md mt-2 py-2 rounded-md" id="services-dropdown">
       <a href="#group" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">Confident Kids Coaching</a>
+      <a href="poster.png" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200" target="_blank">Find more</a>
       <a href="#1on1" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">Personalized Coaching</a>
       <a href="#faq" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">FAQs</a>
     </div>
@@ -290,19 +291,21 @@
     </section>
 
 
-    <!-- Contact Section -->
-    <section id="contact" class="py-16 bg-white px-4 sm:px-6 lg:px-8">
-        <div class="container mx-auto text-center">
-            <h3 class="text-2xl font-bold text-teal-600">Contact Us</h3>
-            <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">Have questions or want to book a session? Get in touch with us!</p>
-            <p class="mt-2 text-lg sm:text-base md:text-lg text-gray-700">Email: <a href="mailto:info@connectedcoaching.jp" class="text-teal-600">info@connectedcoaching.jp</a></p>
-        </div>
-    </section>
+        <!-- Contact Section -->
+        <section id="contact" class="py-16 bg-white px-4 sm:px-6 lg:px-8">
+          <div class="container mx-auto text-center">
+              <h3 class="text-2xl font-bold text-teal-600">Contact Us</h3>    
+              <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">Have questions or want to book a session? Get in touch with us!</p>
+              <p class="mt-2 text-lg sm:text-base md:text-lg text-gray-700">Email: <a href="mailto:info@connectedcoaching.jp" class="text-teal-600">info@connectedcoaching.jp</a></p>
+              <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700"><em>Copyright 2024 Connected Coaching & Consulting.</em></p>
+          </div>
+      </section>
 
-    <!-- Footer -->
-    <footer class="bg-teal-600 text-white text-center py-4">
-        <p>&copy; 2024 Connected Coaching & Consulting. All Rights Reserved.</p>
-    </footer>
+      <!-- Footer -->
+      <footer class="bg-teal-600 text-white text-center py-4">
+          <p>&copy; 2024 Connected Coaching & Consulting. All Rights Reserved.</p>
+      </footer>
+      
 
     <script>
     document.addEventListener('DOMContentLoaded', function() {
