--- a/index_cn.html
+++ b/index_cn.html
@@ -273,7 +273,7 @@
     <section id="about" class="py-16 bg-gray-50 px-4 sm:px-6 lg:px-8">
         <div class="container mx-auto flex flex-col md:flex-row">
             <div class="w-full md:w-2/3">
-                <h3 class="text-2xl font-bold text-teal-600">你的孩子是否面对以下的挑战：</h3>
+                <h3 class="text-2xl font-bold text-teal-600">您的孩子是否面对以下的挑战：</h3>
                 <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">
 				-	在面对失败时感到非常沮丧？<br>
 				-	经常把自己的错误失败归咎于他人？<br>
@@ -304,7 +304,7 @@
             <div class="flex flex-col md:flex-row items-center">
                 <div class="w-full md:w-2/3">
                     <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">
-                        你的孩子将学习到<br>
+                      您的孩子将学习到<br>
 						-	如何自我意识和转变限制性信念，以及如何主动创造正向信念。<br>
 						-	如何在事与愿违时也能保持乐观心态。<br>
 						-	如何面对失败仍然充满自信，相信自己能够战胜失落和恐惧。<br>
