--- a/services.html
+++ b/services.html
@@ -224,12 +224,16 @@
         </div>
       </section>
 
-    <!-- Hero Section -->
-    <section class="bg-hero-image2 bg-cover bg-center text-base text-center py-8 md:py-16 px-4 md:px-8">
-        <div class="container mx-auto"> 
-            </div>
+      <section class="bg-hero-image2 bg-cover bg-center text-base text-center py-8 md:py-16 px-4 md:px-8">
+        <div class="container mx-auto">
+          <a href="poster.png" target="_blank"
+             class="inline-block bg-gray-500 bg-opacity-50 text-3xl text-black rounded-full px-8 py-4 font-bold shadow-md
+                    hover:bg-opacity-75 transition-colors">
+            Find more
+          </a>
         </div>
-    </section>  
+      </section>
+      
 
     <!-- About 1 on 1 section -->
     <section id="1on1" class="py-16 bg-white px-4 sm:px-6 lg:px-8">
